--- a/ansible/app.yml
+++ b/ansible/app.yml
@@ -12,7 +12,7 @@
 
     - name: Add config for DB connection
       template:
-        src: template/db_config.j2
+        src: templates/db_config.j2
         dest: /home/ubuntu/db_config
         owner: ubuntu
         group: ubuntu
