--- a/ansible/db.yml
+++ b/ansible/db.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Change mongo config file
       template:
-        src: template/mongod.conf.j2
+        src: templates/mongod.conf.j2
         dest: /etc/mongod.conf
         mode: 0644
       notify: restart mongod
