--- a/ansible/reddit_app_multiple_plays.yml
+++ b/ansible/reddit_app_multiple_plays.yml
@@ -8,7 +8,7 @@
   tasks:
     - name: Change mongo config file
       template:
-        src: template/mongod.conf.j2
+        src: templates/mongod.conf.j2
         dest: /etc/mongod.conf
         mode: 0644
       notify: restart mongod
@@ -32,7 +32,7 @@
 
     - name: Add config for DB connection
       template:
-        src: template/db_config.j2
+        src: templates/db_config.j2
         dest: /home/ubuntu/db_config
         owner: ubuntu
         group: ubuntu
