--- a/ansible/reddit_app_one_play.yml
+++ b/ansible/reddit_app_one_play.yml
@@ -8,7 +8,7 @@
     - name: Change mongo config file
       become: true # <-- Выполнить задание от root
       template:
-        src: template/mongod.conf.j2 # <-- Путь до локального файла-шаблона
+        src: templates/mongod.conf.j2 # <-- Путь до локального файла-шаблона
         dest: /etc/mongod.conf # <-- Путь на удаленном хосте
         mode: 0644 # <-- Права на файл, которые нужно установить
       tags: db-tag # <-- Список тэгов для задачи  
