--- a/ansible/files/puma.service
+++ b/ansible/files/puma.service
@@ -7,8 +7,11 @@ Type=simple
 EnvironmentFile=/home/ubuntu/db_config
 User=ubuntu
 WorkingDirectory=/home/ubuntu/reddit
-ExecStart=/ubuntu/local/bin/puma
+ExecStart=/bin/bash -lc 'puma'
 Restart=always
 
 [Install]
 WantedBy=multi-user.target
+
+
+
