--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,14 @@
 [defaults]
-inventory = ./inventory
+inventory = ./environments/stage/inventory
 remote_user = ubuntu
 private_key_file = ~/.ssh/id_rsa
 host_key_checking = False
 retry_files_enabled = False
-interpreter_python = /usr/bin/python
+#interpreter_python = /usr/bin/python
+roles_path = ./roles
+vault_password_file = /home/mari/vault.key
+
+[diff]
+# Включим обязательный вывод diff при наличии изменений и вывод 5 строк контекста
+always = True
+context = 5
